--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "lottie-web": "^5.12.2",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
