chore: add deploy command

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "scripts": {
     "dev:withFont": "NODE_TLS_REJECT_UNAUTHORIZED=0 yarn dev",
     "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint --dir .",
-    "analyze": "ANALYZE=true yarn dev"
+    "analyze": "ANALYZE=true yarn dev",
+    "deploy": "yarn build && yarn add -f .next/ && git commit -m 'deploy to netlify' && git push origin master:relase"
   },
   "homepage": "https://dev-hikun.github.io/wedding",
   "dependencies": {
