--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --dir .",
-    "analyze": "ANALYZE=true yarn dev"
+    "analyze": "ANALYZE=true yarn dev",
+    "deploy": "ntl login && ntl open"
   },
   "homepage": "https://dev-hikun.github.io/wedding",
   "dependencies": {
@@ -19,6 +20,7 @@
     "sharp": "^0.32.3"
   },
   "devDependencies": {
+    "netlify-cli": "^15.9.0",
     "@next/bundle-analyzer": "^13.4.9",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
