--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "sharp": "^0.32.3"
   },
   "devDependencies": {
-    "netlify-cli": "^15.9.0",
     "@next/bundle-analyzer": "^13.4.9",
+    "@types/navermaps": "^3.6.5",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
@@ -36,6 +36,7 @@
     "eslint-plugin-prettier": "^5.0.0-alpha.2",
     "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-testing-library": "^5.5.1",
+    "netlify-cli": "^15.9.0",
     "prettier": "^3.0.0",
     "typescript": "5.1.6"
   }
