--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@next/font": "^13.4.10",
     "i18next": "^23.2.11",
     "lottie-web": "^5.12.2",
     "next": "latest",
