--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@emotion/styled": "^11.11.0",
     "@next/font": "^13.4.10",
     "i18next": "^23.2.11",
+    "lightgallery": "^2.7.2",
     "lottie-web": "^5.12.2",
     "next": "latest",
     "next-i18next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.2",
-    "sharp": "^0.32.3"
+    "react-photo-album": "^2.3.0",
+    "sharp": "^0.32.3",
+    "yet-another-react-lightbox": "^3.12.2"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.9",
