--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@googlemaps/js-api-loader": "^1.16.2",
     "@next/font": "^13.4.10",
+    "firebase": "^10.4.0",
     "i18next": "^23.2.11",
     "lightgallery": "^2.7.2",
     "lottie-web": "^5.12.2",
